# MathOperations

./: .gitignore  CMakeLists.txt  README.md
scr/: main.cpp  operation_generator.cpp  operation_generator.h
src/: main.cpp  operation_generator.h
